# demforge

./: README.md  pyproject.toml  requirements.txt  usgs_training.ipynb
configs/: residual_unet_512.yaml  residual_unet_smoke.yaml
data/synthetic/train/: synthetic_00001.npz  synthetic_00002.npz  synthetic_00003.npz  synthetic_00004.npz  synthetic_00005.npz  synthetic_00006.npz  synthetic_00007.npz
data/synthetic/val/: synthetic_00000.npz
demforge/: __init__.py  losses.py  metrics.py  render.py  terrain_ops.py  utils.py
demforge/data/: tiles.py
demforge/models/: unet.py
docs/: ARCHITECTURE.md  COLAB_NOTES.md  DATASET_STRATEGY.md
outputs/renders/: synthetic_target.npy  synthetic_target_metrics.json
scripts/: build_tiles.py  make_synthetic_dataset.py  render_heightmap.py  sample.py  train_residual_unet.py
