[project]
name = "demforge"
version = "1.0.0"
description = "DEM-trained procedural terrain generation"
authors = [
    {name = "DJ Stomp",email = "85457381+DJStompZone@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=1.26)",
    "pillow (>=10.0)",
    "matplotlib (>=3.8)",
    "pyyaml (>=6.0)",
    "pyyaml (>=6.0)",
    "tqdm (>=4.66)",
    "torch (>=2.3)",
    "rasterio (>=1.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
